# abstracted-fs

./: Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  ops.rs  unix.rs  util.rs
src/backends/: ftp.rs  mod.rs  sftp.rs  std.rs
