[package]
name = "abstracted-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "net"] }
suppaftp = { version = "6.0", features = ["async", "async-native-tls"] }
serde = { version = "1.0", features = ["rc"], optional = true }
russh-sftp = "2.0.1"
trash = "5.0.0"
async-trait = "0.1.80"
bitflags = "2.6.0"

[features]
serde = ["dep:serde"]
